# connectedhomeip-1

./: .gitignore  CMakeLists.txt  configure.ac  gn_build.sh
config/nrfconnect/: nrfconnect-app.cmake
examples/: CMakeLists.txt
examples/chip-tool/: CMakeLists.txt
examples/lighting-app/nrf5/: CMakeLists.txt
examples/lock-app/nrf5/: CMakeLists.txt
examples/lock-app/nrfconnect/: CMakeLists.txt
examples/lock-app/nrfconnect/main/: CMakeLists.txt  main.cpp
examples/platform/nrf528xx/app/ldscripts/: chip-nrf52840-example.ld
examples/shell/: CMakeLists.txt
integrations/cmake/: extensions.cmake  options.cmake
integrations/cmake/toolchains/: arm-none-eabi.cmake
integrations/zephyr/: .gn
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/plugin/tests/: CMakeLists.txt
src/ble/: CMakeLists.txt
src/ble/tests/: CMakeLists.txt
src/crypto/: CMakeLists.txt
src/crypto/tests/: CMakeLists.txt
src/include/: CMakeLists.txt
src/inet/: CMakeLists.txt
src/inet/tests/: CMakeLists.txt  TestInetCommon.cpp  TestInetCommonOptions.cpp
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt
src/lib/core/tests/: CMakeLists.txt
src/lib/shell/: CMakeLists.txt
src/lib/shell/tests/: CMakeLists.txt
src/lib/support/: CMakeLists.txt
src/lib/support/tests/: CMakeLists.txt
src/lwip/: CMakeLists.txt
src/lwip/tests/: CMakeLists.txt
src/platform/: CMakeLists.txt  Makefile.am
src/platform/nrfconnect/: BLEManagerImpl.cpp  BLEManagerImpl.h  CHIPDevicePlatformConfig.h  Logging.cpp
src/platform/tests/: CMakeLists.txt
src/qrcodetool/: CMakeLists.txt
src/setup_payload/: CMakeLists.txt
src/setup_payload/tests/: CMakeLists.txt
src/system/: CMakeLists.txt  SystemError.cpp
src/system/tests/: CMakeLists.txt
src/test_driver/nrfconnect/: CMakeLists.txt
src/transport/: CMakeLists.txt
src/transport/tests/: CMakeLists.txt
